--- a/daily/static/daily/daily.css
+++ b/daily/static/daily/daily.css
@@ -1,6 +1,6 @@
 .flex-li {
   border: 1px solid black;
-  margin: 3px;
+  margin: 3px auto;
   padding: 3px;
   width: 100px;
   text-align: center;
@@ -49,8 +49,12 @@
 }
 
 ol {
+  display: inline-block;
   -webkit-padding-start: 0px;
   list-style-type: none;
+  height: 100%; 
+  width: 100%;
+  min-height: 30px;
 }
 
 ol li {
