--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -8,6 +8,9 @@
       <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/bootstrap.min.css' %}"/>
+
+      <script type="text/javascript" src="{% static 'daily/daily.js' %}"></script>
+      
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/daily.css' %}"/>
 
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/trash.css' %}"/>
@@ -24,7 +27,6 @@
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/jquery.timepicker.css' %}"/>
       <script type = "text/javascript" src="{% static 'daily/jquery.timepicker.js'%}"></script>
 
-      <script type="text/javascript" src="{% static 'daily/daily.js' %}"></script>
     </head>
     <body>
       <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -102,10 +104,18 @@
               {% endfor %}
             </tbody>
           </table>
-          <div class="trash-icon">
-            <div class="lid"></div>
-            <div class="lidcap"></div>
-            <div class="bin"></div>
+          <div class="v-box">
+          <ol class='trash employee_trash'>
+            <li>
+              <div>
+                <div class="lid"></div>
+                <div class="lidcap"></div>
+                <div class="bin"></div>
+              </div>
+              </li>
+            </ol>
+            <ol class='trash phone_trash'>
+            </ol>
           </div>
           <div class="v-box">
             <h3>employees</h3>
