--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -62,13 +62,10 @@
       <div id="daily-view">
         <div id="form-fields">
           <button type="button" class="btn btn-primary btn-lg" id="new-proj-button" onclick="addProject()">New project</button>
-          <form method="post" action="new_project" style="display: inline;"
-            onsubmit="updateSchedule()">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-primary btn-lg"
-              id="save-button">Save Changes</button>
+          <span class="csrf">{% csrf_token %}</span>
+             <button type="button" class="btn btn-primary btn-lg"
+              id="save-button" onclick="updateSchedule()">Save Changes</button>
             <input type="hidden" name="schedule" id="schedule"/>
-          </form>
 
         </div>
         <div class="h-box">
