Fix margins a little

--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -115,7 +115,7 @@
                 <div class="bin"></div>
               </li>
             </ol>
-          <div class="v-box">
+          <div class="v-box" id="sources">
             <h3>employees</h3>
             <ol class='sortable_with_no_drop' id="emps-source">
               {% for emp in emp_names.all %}
