--- a/daily/static/daily/daily.css
+++ b/daily/static/daily/daily.css
@@ -1,3 +1,13 @@
+#new-name {
+  min-width: 100px;
+  max-width: 100px;
+}
+
+#new-time {
+  min-width: 70px;
+  max-width: 70px;
+}
+
 .errors-box {
   border: 1px solid black;
   margin: 3px;
@@ -27,6 +37,7 @@
   flex-direction: row;
   justify-content: space-around;
 }
+
 .v-box {
   padding: 0;
   margin: 0;
@@ -41,7 +52,9 @@
   justify-content: space-around;
 }
 
-
+#sources {
+  margin: 0 auto;
+}
 #form-fields {
   padding: 10px;
 }
@@ -53,7 +66,8 @@
 
 
 #daily-table {
-  width: 50%;
+  width: auto; 
+  margin: 0 auto;
 }
 
 ol {
