--- a/daily/static/daily/trash.css
+++ b/daily/static/daily/trash.css
@@ -11,7 +11,7 @@
   position: relative;
   width: 160px;
   height: 160px;
-  margin: 50px auto 0;
+  //margin: 50px auto 0;
   border-radius: 4px;
   transition: box-shadow .2s ease;
 }
