--- a/daily/static/daily/daily.css
+++ b/daily/static/daily/daily.css
@@ -49,12 +49,12 @@
   display: -webkit-flex;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
 }
 
 #sources {
   margin: 0 auto;
 }
+
 #form-fields {
   padding: 10px;
 }
@@ -66,6 +66,7 @@
 
 
 #daily-table {
+  float: left;
   width: auto; 
   margin: 0 auto;
 }
@@ -74,7 +75,7 @@ ol {
   display: inline-block;
   -webkit-padding-start: 0px;
   list-style-type: none;
-  height: 100%; 
+  //height: 100%; 
   width: 100%;
   min-height: 30px;
 }
