--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -41,7 +41,18 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#about">About</a>
+            <li class="dropdown">
+            <a href="#" class="dropdown-toggle"
+              data-toggle="dropdown" role="button" aria-haspopup="true"
+              aria-expanded="false">Manage <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="employees">Employees</a></li>
+                  <li><a href="#">Phones</a></li>
+                  <li><a href="#">Vehicles</a></li>
+                </ul>
+                </li>
+            </li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
