Add util.js file

--- a/daily/templates/daily/daily.html
+++ b/daily/templates/daily/daily.html
@@ -9,10 +9,9 @@
       <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/bootstrap.min.css' %}"/>
 
+      <script type="text/javascript" src="{% static 'daily/util.js' %}"></script>
       <script type="text/javascript" src="{% static 'daily/daily.js' %}"></script>
-      
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/daily.css' %}"/>
-
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/trash.css' %}"/>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="{% static 'daily/ie10-viewport-bug-workaround.css' %}" rel="stylesheet">
