--- a/daily/templates/daily/employees.html
+++ b/daily/templates/daily/employees.html
@@ -14,6 +14,8 @@
  
 
       <script type = "text/javascript" src="{% static 'daily/jquery-sortable.js'%}"></script>
+      
+      <script type="text/javascript" src="{% static 'daily/util.js' %}"></script>
       <script type="text/javascript" src="{% static 'daily/employee.js' %}"></script>
       <script type="text/javascript" src="{% static 'daily/daily.js' %}"></script>
       <link rel="stylesheet" type="text/css" href= "{% static 'daily/daily.css' %}"/>
